crates/glyph-cli/tests/corpus/invalid/slot_in_context_unknown_param.glyph
skill summarize(scope = ".")
    description: "Context body references an undeclared parameter."
    context: "Inspect {undeclared} first."

    flow:
        "Run the work."
